--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "json-server": "^0.17.3",
+    "photoswipe": "^5.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-photoswipe-gallery": "^2.2.7",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.11",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
